added data file and comments

--- a/PastTense.ipynb
+++ b/PastTense.ipynb
@@ -362,7 +362,7 @@
    "source": [
     "### Preparing the data\n",
     "\n",
-    "One of the main points of the past tense simulation is generalisability, or the realisation that as human speakers of English we can easily create a past tense form for a new word, like wug --> wugged. As discussed in the lecture we're going to use a training set and a separate test set, so that we can train the model on some data but test with unseen cases how well the model generalises.\n",
+    "One of the main points of the past tense simulation is generalisability, or the realisation that as human speakers of English we can easily create a past tense form for a new word, like wug --> wugged. As discussed in the lecture we're going to use a training set and a separate test set, so that we can train the model on some data but test with unseen cases how well the model generalises. As you will notice, the data we use here contain \"made up\" verbs (pseudowords) that don't really exist in English, but that all consist of three phonemes (consonant-vowel-consonant). This is so as to be able to focus on the past tense problem per se, rather than on the fact that most English verbs don't consist of exactly three phonemes.\n",
     "\n",
     "The following code will create eight variables:<br>\n",
     "`trainInput` (numeric input to neural network for training)<br>\n",
